--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
-
+*.log
 # Ignore all upload files
 /public/system
 /public/ckeditor_assets
