--- a/config/database_mysql2.yml
+++ b/config/database_mysql2.yml
@@ -1,21 +1,21 @@
 development: &default
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   database: insoshi_development
-  username: postgres
+  username: root
   password: '123456'
+  socket: /tmp/mysql.sock
+  host: 127.0.0.1
+#port: 3306
   pool: 5
-  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-
 test:
   <<: *default
   database: insoshi_test
-
 
 production:
   <<: *default
